# arborium

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Procfile  README.md  arbor.toml  justfile
.github/workflows/: ci.yml  codspeed.yml  release.yml
assets/icons/: AppIcon.icns
crates/arbor-benchmarks/: Cargo.toml
crates/arbor-benchmarks/benches/: embedded_terminal.rs
crates/arbor-benchmarks/src/: lib.rs
crates/arbor-cli/: Cargo.toml
crates/arbor-cli/src/: cli.rs  commands.rs  main.rs
crates/arbor-core/: Cargo.toml
crates/arbor-core/benches/: benchmarks.rs
crates/arbor-core/src/: agent.rs  changes.rs  daemon.rs  lib.rs  process.rs  procfile.rs  repo_config.rs  session.rs  worktree.rs  worktree_name.rs  worktree_scripts.rs
crates/arbor-core/tests/: changes_integration.rs  worktree_integration.rs
crates/arbor-daemon-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/arbor-gui/: Cargo.toml
crates/arbor-gui/src/: actions.rs  agent_activity.rs  agent_chat.rs  agent_presets.rs  app_bootstrap.rs  app_config.rs  app_init.rs  assets.rs  background_pollers.rs  center_panel.rs  changes_pane.rs  checkout.rs  command_palette.rs  constants.rs  daemon_connection_ui.rs  daemon_runtime.rs  diff_engine.rs  diff_view.rs  error.rs  external_launchers.rs  file_view.rs  git_actions.rs  github_auth_modal.rs  github_auth_store.rs  github_helpers.rs  github_oauth.rs  github_pr_refresh.rs  github_service.rs  graphql.rs  helpers.rs  issue_cache_store.rs  issue_details_modal.rs  key_handling.rs  log_view.rs  main.rs  manage_hosts.rs  managed_processes.rs  mdns_browser.rs  notifications.rs  port_detection.rs  (+26 more)
crates/arbor-gui/src/graphql/: pull_request_details.graphql  review_threads.graphql
crates/arbor-httpd/: Cargo.toml
crates/arbor-httpd/src/: agent_chat.rs  auth.rs  error.rs  issue_linking.rs  issue_provider.rs  main.rs  managed_worktree.rs  mdns.rs  process_manager.rs  process_metrics.rs  repository_store.rs  routes.rs  startup.rs  task_scheduler.rs  terminal_daemon.rs  tls.rs  types.rs
crates/arbor-mcp/src/: lib.rs
crates/arbor-mosh/src/: shell.rs
crates/arbor-ssh/src/: provisioner.rs
crates/arbor-symphony/src/: service.rs  workspace.rs
crates/arbor-terminal-emulator/: Cargo.toml
crates/arbor-terminal-emulator/src/: alacritty_emulator.rs  alacritty_support.rs  ghostty_vt_experimental.rs  lib.rs
crates/arbor-terminal-emulator/tests/: engine_performance.rs
crates/arbor-web-ui/: Cargo.toml
crates/arbor-web-ui/app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/arbor-web-ui/app/e2e/: app.spec.ts
crates/arbor-web-ui/app/src/: api.ts  main.ts  state.ts  styles.css  types.ts
crates/arbor-web-ui/app/src/components/: changes-panel.ts  command-palette.ts  create-worktree-modal.ts  sidebar.ts  terminal-panel.ts
crates/arbor-web-ui/app/src/styles/: changes.css  mobile.css  overlays.css  sidebar.css  terminal.css
crates/arbor-web-ui/src/: lib.rs
docs/: book.toml  daemon-contract.md  http-api-v1.md
docs/src/: SUMMARY.md  automation-and-repo-config.md  getting-started.md  github-agents-and-git.md  index.md  qa-checklist.md  reference-daemon-contract.md  reference-http-api-v1.md  reference-mcp.md  remote-daemon-and-mcp.md  repositories-and-worktrees.md  terminals-diffs-and-files.md  themes-settings-and-notifications.md  workspace-model.md
docs/theme/: custom.css
packaging/macos/: Info.plist
plans/: arbor-feature-roadmap.md  codex-autorunner-comparison.md  codexmonitor-comparison.md  conductor-comparison.md  jean-comparison.md  openwork-comparison.md  polyscope-comparison.md  superbot2-comparison.md  superset-comparison.md  superterm-comparison.md  t3code-comparison.md  tier1-implementation-plan.md
scripts/: build-ghostty-vt-bridge.sh
scripts/ci/: check-binary-names.sh  package-linux.sh  package-macos.sh  package-windows.ps1
scripts/ghostty-vt/: arbor_bridge.zig  arbor_build.zig
