[workspace]
default-members = ["crates/arbor-core", "crates/arbor-gui"]
members = ["crates/arbor-core", "crates/arbor-gui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[workspace.dependencies]
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "9d9640d4" }
anyhow = "1"
fuser = "0.17.0"
gix = "0.80.0"
gpui = "0.2.2"
libssh-rs = "0.3.6"
octocrab = "0.49.5"
portable-pty = "0.9.0"
thiserror = "2"
