[workspace]
default-members = ["crates/arbor-core", "crates/arbor-gui", "crates/arbor-httpd"]
members = [
    "crates/arbor-core",
    "crates/arbor-gui",
    "crates/arbor-httpd",
    "crates/arbor-web-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[workspace.dependencies]
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "9d9640d4" }
anyhow = "1"
axum = "0.8.4"
config = "0.15.19"
fuser = "0.17.0"
gix = "0.80.0"
gix-diff = "0.60.0"
gpui = "0.2.2"
imara-diff = "0.2.0"
libssh-rs = "0.3.6"
octocrab = "0.49.5"
portable-pty = "0.9.0"
ropey = "1.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5.3.0"
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
