[package]
name = "arbor-gui"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "Arbor"
path = "src/main.rs"

[features]
vendored-openssl = ["libssh-rs-sys/vendored-openssl", "libssh-rs-sys/vendored"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[dependencies]
libssh-rs-sys = { version = "0.2", optional = true }
anyhow = { workspace = true }
arbor-core = { path = "../arbor-core" }
arbor-mosh = { path = "../arbor-mosh" }
arbor-ssh = { path = "../arbor-ssh" }
arbor-terminal-emulator = { path = "../arbor-terminal-emulator" }
config = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
gix = { workspace = true }
gix-diff = { workspace = true, features = ["blob-experimental"] }
gpui = { workspace = true }
gpui_http_client = { workspace = true }
imara-diff = { workspace = true }
mdns-sd = { workspace = true }
notify-rust = { workspace = true }
octocrab = { workspace = true }
portable-pty = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
smol = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = "0.28"
ureq = { workspace = true }

[lints]
workspace = true
