[package]
name = "arbor-gui"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "Arbor"
path = "src/main.rs"

[features]
default = ["ssh", "mosh", "mdns"]
ssh = ["dep:arbor-ssh", "arbor-core/ssh"]
mosh = ["dep:arbor-mosh", "ssh", "arbor-core/mosh"]
mdns = ["dep:zeroconf"]
vendored-openssl = ["arbor-core/vendored-openssl", "libssh-rs-sys/vendored-openssl", "libssh-rs-sys/vendored"]
ghostty-vt-experimental = ["arbor-terminal-emulator/ghostty-vt-experimental"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { workspace = true }

[dependencies]
libssh-rs-sys = { workspace = true, optional = true }
anyhow = { workspace = true }
arbor-core = { path = "../arbor-core" }
arbor-mosh = { path = "../arbor-mosh", optional = true }
arbor-ssh = { path = "../arbor-ssh", optional = true }
arbor-terminal-emulator = { path = "../arbor-terminal-emulator" }
config = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
gix = { workspace = true }
gix-diff = { workspace = true, features = ["blob-experimental"] }
gpui = { workspace = true }
hostname = { workspace = true }
gpui_http_client = { workspace = true }
imara-diff = { workspace = true }
zeroconf = { workspace = true, optional = true }
notify-rust = { workspace = true }
octocrab = { workspace = true }
portable-pty = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
smol = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = { workspace = true }
ureq = { workspace = true }

[lints]
workspace = true
