[package]
name = "arbor-httpd"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "arbor-httpd"
path = "src/main.rs"

[features]
vendored-openssl = ["arbor-core/vendored-openssl"]

[dependencies]
arbor-core = { path = "../arbor-core" }
arbor-web-ui = { path = "../arbor-web-ui" }
axum = { workspace = true, features = ["ws"] }
futures-util = "0.3"
hostname = "0.4"
mdns-sd = { workspace = true }
octocrab = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tower-http = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
