[package]
edition.workspace      = true
license.workspace      = true
name                   = "arbor-httpd"
rust-version.workspace = true
version.workspace      = true

[[bin]]
name = "arbor-httpd"
path = "src/main.rs"

[features]
default = ["mdns"]
mdns = ["dep:zeroconf"]
vendored-openssl = ["arbor-core/vendored-openssl"]
ghostty-vt-experimental = ["arbor-terminal-emulator/ghostty-vt-experimental"]

[dependencies]
arbor-daemon-client = { path = "../arbor-daemon-client" }
arbor-core   = { path = "../arbor-core" }
arbor-terminal-emulator = { path = "../arbor-terminal-emulator" }
arbor-web-ui = { path = "../arbor-web-ui" }
axum         = { features = ["ws"], workspace = true }
config       = { workspace = true }
futures-util = { workspace = true }
git2         = { workspace = true }
gix          = { workspace = true }
hmac         = { workspace = true }
hostname     = { workspace = true }
zeroconf     = { workspace = true, optional = true }
octocrab     = { workspace = true }
portable-pty = { workspace = true }
rand         = { workspace = true }
secrecy      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
toml         = { workspace = true }
toml_edit    = { workspace = true }
tower-http   = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower    = { workspace = true }

[lints]
workspace = true
